2000-08-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-mime-message.c (camel_mime_message_set_subject): Do a
	g_strstrip on the subject so we can stop getting those annoying
	leading spaces

2000-08-07  Dan Winship  <danw@helixcode.com>

	* camel-folder.c (camel_folder_free_deep): Fix this to not require
	NULL-termination of the array.

2000-08-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (imap_connect): If we fail to
	get a dir_sep, then supply the default of "/".
	(get_folder): Undo changes by Peter

2000-08-04  Peter Williams  <peterw@helixcode.com>

	* providers/imap/camel-imap-store.c (get_folder): Prevent a coredump
	when get_folder()ing from a store with dir_sep = NULL.

2000-08-04  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-folder.c (pop3_set_message_flags): 
	(pop3_sync): Indexes into the flags array are message_number minus
	1, not just message_number.

	* providers/pop3/camel-pop3-store.c: add a debugging macro for
	doing protocol tracing.

2000-08-03  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): Only
	call imap_get_summary_internal if the folder can hold messages

	* providers/nntp/camel-nntp-provider.c (camel_provider_module_init): 
	Initialize the service_cache for the news/nntp providers

2000-08-03  Peter Williams  <peterw@helixcode.com>

	* providers/nntp/Makefile.am (INCLUDES): Add -I$(top_srcdir) to
	pull in libibex/ibex.h

2000-08-02  Dan Winship  <danw@helixcode.com>

	* providers/MH: Kill this. It doesn't have any code to do anything
	the new mh provider doesn't do better.

	* providers/Makefile.am: Remove reference to MH subdir, and
	promote nntp to fully-supported status, since it does compile and
	all.

	* camel-mime-message.c (camel_mime_message_set_subject): Trim
	trailing space from the subject. I've now seen replies from two
	different people that tricked the threading code by (a) not having